--- a/index.html
+++ b/index.html
@@ -1,21 +1,70 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="interface.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Idle Game</title>
 </head>
 <body>
-<button onclick="cookieClick(1)">Click Me!</button>
-<br />
-Cookies: <span id="cookies">0</span>
-<br />
-<button onclick="buyCursor()">Buy Cursor</button>
-<br />
-Cursors: <span id="cursors">0</span>
-<br />
-Cursor Cost: <span id="cursorCost">10</span>
-                <br />
-                <button onclick="saveState()">Save</button>
-                <button onclick="loadSave()">Load</button>
-<script type="text/javascript" src="main.js"></script>
+  <h1>Idle Game</h1>
+  <p>Open the browser console to see the game updates.</p>
+
+  <script>
+    // Your JavaScript code goes here
+
+    // Define initial game state
+    let gameState = {
+      resources: 0,
+      resourcePerSecond: 1,
+      upgrades: {
+        autoClicker: {
+          cost: 10,
+          increment: 1,
+          purchased: 0
+        }
+      }
+    };
+
+    // Function to update the game state every second
+    function updateGame() {
+      // Update resources based on resource per second
+      gameState.resources += gameState.resourcePerSecond;
+
+      // Display current state
+      console.log(`Resources: ${gameState.resources}`);
+
+      // Check for available upgrades
+      for (const upgrade in gameState.upgrades) {
+        const upgradeInfo = gameState.upgrades[upgrade];
+        console.log(`${upgrade}: ${upgradeInfo.purchased} purchased`);
+      }
+    }
+
+    // Function to purchase an upgrade
+    function purchaseUpgrade(upgrade) {
+      const upgradeInfo = gameState.upgrades[upgrade];
+
+      // Check if player has enough resources
+      if (gameState.resources >= upgradeInfo.cost) {
+        // Deduct the cost and apply the upgrade
+        gameState.resources -= upgradeInfo.cost;
+        gameState.resourcePerSecond += upgradeInfo.increment;
+        upgradeInfo.purchased++;
+
+        // Increase the cost for the next purchase
+        upgradeInfo.cost *= 2;
+
+        console.log(`Purchased ${upgrade}`);
+      } else {
+        console.log(`Not enough resources to purchase ${upgrade}`);
+      }
+    }
+
+    // Example: Purchase auto-clicker upgrade
+    purchaseUpgrade('autoClicker');
+
+    // Example: Run the game loop
+    setInterval(updateGame, 1000);
+  </script>
 </body>
 </html>
-
